--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^16.3.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
