--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.0.0",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
+    "puppeteer": "^24.16.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dnd": "^16.0.1",
